# Numario

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_refresh_tokens.py  0003_add_user_nickname.py  0004_create_categories.py  0005_create_transactions.py  0006_create_classification_rules.py  0007_create_budgets.py  0008_create_category_forecasts.py
backend/app/: main.py
backend/app/api/: deps.py  health.py
backend/app/core/: config.py  password_policy.py  rate_limit.py  security.py
backend/app/db/: base.py  default_categories.py  session.py
backend/app/models/: __init__.py  budget.py  category.py  category_forecast.py  classification_rule.py  refresh_token.py  transaction.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  budget.py  category.py  common.py  import_.py  transaction.py
backend/app/services/: __init__.py  analytics_service.py  (+10 more)
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_analytics.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py  test_budget.py  test_categories.py  test_classification.py  test_config_guard.py  test_csv_import.py  test_forecast.py  test_health.py  test_import_confirm.py  test_import_preview.py  test_password_policy.py  test_protected.py  test_rate_limit.py  test_security.py  test_transaction_decimal.py  test_transactions.py
(+86 files in other folders)
